--- a/MyTime/Web.config
+++ b/MyTime/Web.config
@@ -13,8 +13,8 @@
 		<add key="Device" value="Suprema" />
 
 		
-		<add key="ProductCode" value="uJi7Qc9IV1Li7ehRMwCT333OKcyhxKez0ujlfpczQDg=" />
-		<!--<add key="ProductCode" value="96PgRGCu77wkFS6e9LiFYfjj8k7taOj66ngFoewIgwo=" />-->
+		<!--<add key="ProductCode" value="uJi7Qc9IV1Li7ehRMwCT333OKcyhxKez0ujlfpczQDg=" />-->
+		<add key="ProductCode" value="96PgRGCu77wkFS6e9LiFYfjj8k7taOj66ngFoewIgwo=" />
 
 		<add key="Sender" value="tams.mynix@gmail.com"/>
 		<add key="SmtpHost" value="smtp.gmail.com"/>		
@@ -40,8 +40,8 @@
 	</system.web>
 	<connectionStrings>
 	
-		<add name="MyTimeDB" connectionString="Persist Security Info=false; Integrated Security=true; uid=msa; password=admin118; data source=localhost\SQL2019; Initial Catalog=MyTimeDB_KBS;" providerName="System.Data.SqlClient;" />
-		<add name="DeviceDB" connectionString="Persist Security Info=false; Integrated Security=true; data source=localhost\SQL2019; Initial Catalog=BioStarAC;" providerName="System.Data.SqlClient;" />
+		<add name="MyTimeDB" connectionString="Persist Security Info=false; Integrated Security=true; uid=msa; password=admin118; data source=localhost\SQL2019E; Initial Catalog=MyTimeDB_KBS;" providerName="System.Data.SqlClient;" />
+		<add name="DeviceDB" connectionString="Persist Security Info=false; Integrated Security=true; data source=localhost\SQL2019E; Initial Catalog=BioStarAC;" providerName="System.Data.SqlClient;" />
 		
 		<!--<add name="MyTimeDB" connectionString="Persist Security Info=false; Integrated Security=true; data source=DESKTOP-661QQFF\SQL2019; Initial Catalog=MyTimeDB;" providerName="System.Data.SqlClient;" />-->
 		
