KBS@MyTime - 20220704 1. Attendance Card Report (in progress_

--- a/MyTime/MyTime.csproj
+++ b/MyTime/MyTime.csproj
@@ -233,6 +233,7 @@
     </Compile>
     <Compile Include="Services\AccessRoleDBService.cs" />
     <Compile Include="Services\AnnouncementDBService.cs" />
+    <Compile Include="Services\AttendanceCardDBService.cs" />
     <Compile Include="Services\ReasonApprovalDBService.cs" />
     <Compile Include="Services\AttendanceDBService.cs" />
     <Compile Include="Services\CrystalReportDBService.cs" />
