KBS@MyTime - 20220710 - Rev 1

--- a/MyTime/MyTime.csproj
+++ b/MyTime/MyTime.csproj
@@ -260,6 +260,7 @@
     <Compile Include="ViewModels\AnnouncementViewModel.cs" />
     <Compile Include="ViewModels\AttendanceAnalysisViewModel.cs" />
     <Compile Include="ViewModels\AttendanceCardReportViewModel.cs" />
+    <Compile Include="ViewModels\AttendanceCardSummaryReportViewModel.cs" />
     <Compile Include="ViewModels\AttendanceReportViewModel.cs" />
     <Compile Include="ViewModels\AttendanceStatisticsViewModel.cs" />
     <Compile Include="ViewModels\AttendanceSummaryReportViewModel.cs" />
