--- a/MyTime/MyTime.csproj
+++ b/MyTime/MyTime.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Services\AccessRoleDBService.cs" />
     <Compile Include="Services\AnnouncementDBService.cs" />
     <Compile Include="Services\AttendanceCardDBService.cs" />
+    <Compile Include="Services\DataMaintenanceDBService.cs" />
     <Compile Include="Services\ReasonApprovalDBService.cs" />
     <Compile Include="Services\AttendanceDBService.cs" />
     <Compile Include="Services\CrystalReportDBService.cs" />
